--- a/index.css
+++ b/index.css
@@ -15,3 +15,16 @@ body, html {
     font-size: 25px;
 }
 
+.topLeft p{
+    margin-top: 0;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-size: 20px;
+}
+
+.mid p{
+    margin-top: 0;
+    padding-left: 540px;
+    padding-top: 100px;
+    font-size: 40px;
+}
