--- a/index.css
+++ b/index.css
@@ -23,8 +23,8 @@ body, html {
 }
 
 .mid p{
-    margin-top: 0;
-    padding-left: 540px;
-    padding-top: 100px;
+    margin-top: 130px;
+    margin-left: 35px;
     font-size: 40px;
+    text-align: center;
 }
