--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body, html {
   }
 
 .bg {
-    background-image: url('/img/bg.jpg');
+    background-image: url('/img/wplogo.jpeg');
     height: 100%;
     margin: 0;
     color: white;
