--- a/index.css
+++ b/index.css
@@ -15,16 +15,37 @@ body, html {
     font-size: 25px;
 }
 
-.topLeft p{
+.topLeft p {
     margin-top: 0;
     padding-left: 20px;
     padding-top: 20px;
     font-size: 20px;
 }
 
-.mid p{
+.mid p {
     margin-top: 130px;
     margin-left: 35px;
     font-size: 40px;
     text-align: center;
 }
+
+.bgsocial {
+    background: rgba(0,0,0,0.3);
+    color: #FFF;
+    height: 50px; 
+    width: 100%;
+    margin: 0px;
+    text-align: center;
+    position:absolute;
+    bottom:0;
+}
+
+.bgsocial img {
+    height: 40px;
+    width: 40px;
+    margin-top: 5px;
+    letter-spacing: 50px;
+    -webkit-filter: drop-shadow(0px 0px 2px rgb(0, 255, 0));
+        filter: drop-shadow(0px 0px 2px rgb(0, 255, 0));
+}
+
