--- a/index.css
+++ b/index.css
@@ -32,10 +32,10 @@ body, html {
 .bgsocial {
     background: rgba(0,0,0,0.3);
     color: #FFF;
-    height: 50px; 
+    height: 55px; 
     width: 100%;
     margin: 0px;
-    text-align: center;
+    text-align: right;
     position:absolute;
     bottom:0;
 }
@@ -43,8 +43,8 @@ body, html {
 .bgsocial img {
     height: 40px;
     width: 40px;
-    margin-top: 5px;
-    letter-spacing: 50px;
+    padding-top: 5px;
+    padding-right: 10px;
     -webkit-filter: drop-shadow(0px 0px 2px rgb(0, 255, 0));
         filter: drop-shadow(0px 0px 2px rgb(0, 255, 0));
 }
